# maze_shooter

./: Cargo.toml  LICENSE  shell.nix
assets/: Bug.glb  Robot.glb  Robot.gltf  Walls.glb  Walls.gltf  bullet.gltf
src/: bullet.rs  character_controller.rs  enemy.rs  fps.rs  input.rs  main.rs  player.rs
src/level/: mod.rs
src_assets/: Bug.blend  Robot.blend  Walls.blend  bullet.blend
