[package]
name = "maze_shooter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.12.1"
bevy_xpbd_3d = "0.3.3"
leafwing-input-manager = "0.11.1"
maze = {git = "https://github.com/octorine/maze.git"}
