[package]
name = "maze_shooter"
version = "0.1.0"
edition = "2021"
# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.12.1"
bevy-inspector-egui = "0.22"
bevy_xpbd_3d = "0.3.2"
leafwing-input-manager = "0.11.1"
maze = {git = "https://github.com/octorine/maze.git"}
