[package]
name = "maze_shooter"
version = "0.1.0"
edition = "2021"
# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = {version = "0.12.1", features = ["wayland"]}
bevy-inspector-egui = "0.22"
bevy_xpbd_3d = "0.3.0"
leafwing-input-manager = "0.11.1"
maze = {git = "https://github.com/octorine/maze.git"}
oxidized_navigation = { version = "0.9.0", features = ["xpbd", "debug_draw"] }
rand = "0.8.5"
